<resources>
    <!--AllAlarms-->
    <string name="ButtonAddItem">Add New Alarm</string>
    <string name="EditTextAddAlarm">Enter Alarm Name</string>

    <!--AlarmEdit-->
    <string name="SwitchSnooze">Snooze</string>
    <string name="Delete">Delete Alarm</string>
    <string name="EditSoundsButton">Edit Sounds</string>
    <string name="ButtonRepeat">Repeat</string>
    <string name="ButtonSetAlarm">Set Alarm</string>
    <string name="ButtonAlarmEditSave">Save</string>
    <string name="ButtonChangeAlarmName">Alarm Name</string>

    <!--AlarmName-->
    <string name="EditTextChangeAlarmName">Alarm Name</string>
    <string name="ButtonAlarmNameSave">Save</string>

    <!--AlarmRepeat-->
    <string name="TextViewRepeat">Repeat</string>
    <string name="TextViewCurrentRepeatingLabel">Current Repeat: </string>
    <string name="TextViewCurrentRepeating">Repeat</string>

    <!--AlarmReceiverScreen-->
    <string name="ButtonStopAlarm">Stop</string>
    <string name="TextViewAlarm">Alarm</string>
    <string name="ButtonSnooze">Snooze</string>

    <!--AllSounds-->
    <string name="ButtonAddSound">Add Sound</string>
    <string name="ButtonToAlarmEdit">Save</string>

    <!--ChooseRecording-->
    <string name="buttonMakeRecording">Make Recording</string>

    <!--Home-->
    <string name="app_name">Wake Me Up! Alarm Clock</string>
    <string name="PressToContinue">Press to Continue</string>

    <!--ListViewCustom-->
    <string name="TextViewListItem">Alarm Name</string>
    <string name="SwitchAlarmActive">Off</string>
    <string name="TextViewDisplayRepeat">Repeat</string>

    <!--SoundName-->
    <string name="editTextChangeSoundName">Sound Name</string>
    <string name="ButtonSaveSoundName">Save</string>
    <string name="TextViewAlarmTime">Alarm Time</string>

    <!--SoundsEdit-->
    <string name="buttonSoundName">Sound Name</string>
    <string-array name="sources">
        <item>Change Sound</item>
        <item>Song</item>
        <item>Default Sound</item>
        <item>Voice Recording</item>
    </string-array>
    <string name="buttonDeleteSound">Delete Sound</string>
    <string name="ButtonSoundsEditDone">Done</string>
    <string name="ButtonStartRecord">Start Recording</string>
    <string name="ButtonEndRecord">Stop Recording</string>
    <string name="ButtonPlay">Play</string>
    <string name="ButtonStop">Stop</string>

    <!--SplashScreen-->
    <string name="ImageViewLogo">ImageViewLogo</string>

</resources>
