<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.derek.customizablealarmclock.AlarmEdit">

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="364dp"
        android:layout_height="353dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/Repeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/SwitchSnooze"
        android:layout_width="128dp"
        android:layout_height="31dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="37dp"
        android:text="@string/SwitchSnooze"
        app:layout_constraintBottom_toTopOf="@+id/DeleteAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />

    <Button
        android:id="@+id/DeleteAlarm"
        android:layout_width="133dp"
        android:layout_height="43dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/EditSoundsButton"
        android:layout_width="130dp"
        android:layout_height="41dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="50dp"
        android:text="@string/EditSoundsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Repeat"
        android:layout_width="128dp"
        android:layout_height="46dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/Repeat"
        app:layout_constraintBottom_toTopOf="@+id/EditSoundsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />

</android.support.constraint.ConstraintLayout>
