<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewListItem"
                android:layout_width="450dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/TextViewListItem"
                android:textAlignment="gravity"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:typeface="sans" />

            <Switch
                android:id="@+id/SwitchAlarmActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewAlarmTime"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/TextViewAlarmTime"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/TextViewDisplayRepeat"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/TextViewDisplayRepeat"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>