<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.derek.customizablealarmclock.SoundsEdit"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="368dp"
        android:layout_height="478dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonSoundName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSoundName"
            app:layout_constraintBottom_toTopOf="@+id/spinnerSoundSource"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space2"
            android:onClick="changeSoundName"/>

        <Spinner
            android:id="@+id/spinnerSoundSource"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonDeleteSound"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSoundName" />

        <Button
            android:id="@+id/buttonDeleteSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            android:onClick="delete"
            android:text="@string/buttonDeleteSound"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSoundSource" />

    </LinearLayout>

    <Button
        android:id="@+id/ButtonSoundsEditDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="497dp"
        android:layout_marginTop="761dp"
        android:text="@string/ButtonSoundsEditDone"
        android:onClick="toAllSounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp" />
</android.support.constraint.ConstraintLayout>
