<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.derek.customizablealarmclock.AlarmRepeat"
    tools:layout_editor_absoluteY="89dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TextViewRepeat"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginBottom="73dp"
            android:paddingTop="5dp"
            android:text="@string/TextViewRepeat"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/ListViewRepeat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout8"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="44dp"
            app:layout_constraintBottom_toTopOf="@+id/ListViewRepeat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/TextViewCurrentRepeatingLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="133dp"
                android:text="@string/TextViewCurrentRepeatingLabel"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/TextViewCurrentRepeating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TextViewCurrentRepeating"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="255dp"
                android:layout_marginStart="10dp"
                android:text="@string/TextViewCurrentRepeating"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/TextViewCurrentRepeatingLabel"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <ListView
            android:id="@+id/ListViewRepeat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        </ListView>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>

